removed the initial screen, modifed css to fix bugs
Removed the initial screen, which means also removing the buildInitailDOM function. Moved all initial dom creation to buildGameDom. Had to change the way indexes were initialized, which actually makes things more clear. The index is now 0 on the first question, and increase normally. Had to slightly modify css as well since some elements have been removed which messed up the DOM flow. CSS now matches designs correctly

--- a/src/styles/styles_multiple_choice.css
+++ b/src/styles/styles_multiple_choice.css
@@ -158,16 +158,16 @@
 	}
 
 	.gameImageGridImageLabel {
-	position: absolute;
-    color: white;
-    text-align: center;
-    left: 0px;
-    z-index: 7;
-    font-family: 'DIN Condensed';
-    font-size: 1.25em;
-    margin: 0 auto;
-    width: 175px;
-    bottom: 10px;
+		position: absolute;
+	    color: white;
+	    text-align: center;
+	    left: 0px;
+	    z-index: 7;
+	    font-family: 'DIN Condensed';
+	    font-size: 1.25em;
+	    margin: 0 auto;
+	    width: 175px;
+	    bottom: 10px;
 	}
 
 
@@ -220,7 +220,7 @@
 		align-self: center;
 		font-family: 'DIN Condensed';	
 		position: relative;
-		top: 280px;
+		top: 375px;
 		flex: none;
 		z-index: 10000;
 	}
@@ -232,8 +232,12 @@
 	  color: black;
 	  position: relative;
 	  font-family: 'DIN Condensed';
+	  top: -50px;
 	}
-
+	
+	.gameMessageEmailScreen {
+		top: 15px
+	}
 	#ctaButton {
 
 		border: 1px solid #F0F0F0;
@@ -357,7 +361,7 @@
 	}
 
 	.gameMessageMediumText {
-		top: -10px;
+		top: -60px;
 	}
 
 	@media (max-height:400px){
